Potential fix for editor overflow on webkit

--- a/client/routes/solve/solve.css
+++ b/client/routes/solve/solve.css
@@ -19,3 +19,7 @@
 .editor-sizer {
     width: auto;
 }
+
+.editor-sizer>* {
+    max-height: 100%;
+}
